k8s-cluster-configuration/applications/pastmonday/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pastmonday
  namespace: pastmonday
  labels:
    app: pastmonday
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: pastmonday
  template:
    metadata:
      labels:
        app: pastmonday
    spec:
      containers:
        - name: pastmonday
          image: ghcr.io/kubeden/pastmonday:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
