k8s-cluster-configuration/applications/pastmonday/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pastmonday-service
  namespace: pastmonday
spec:
  selector:
    app: pastmonday
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
